--- a/bevim_project/bevim/templates/timer.html
+++ b/bevim_project/bevim/templates/timer.html
@@ -86,6 +86,7 @@
         	{% url 'change_frequency' %}
 	    </div>
 	</div>
+	{% include "stop_experiment_modal.html" with sensors=sensors %}
 
     <div id="jobresult">RESULTADO: <br></div>
 
@@ -209,6 +210,7 @@
 		        	xhr.setRequestHeader("X-CSRFToken", token);
 		      	},
 				success: function(){
+				  	$("#processing_experiment").modal('show');
 				}
 			});
 		}
