--- a/bevim_project/bevim/templates/timer.html
+++ b/bevim_project/bevim/templates/timer.html
@@ -4,6 +4,11 @@
 {% load i18n %}
 {% load bootstrap_ui_tags %}
 
+{% block head-css %}
+    {{ block.super }}
+    <link href="{% static 'css/timeline.css' %}" media="screen" rel="stylesheet" type="text/css">
+{% endblock %}
+
 {% block head-javascript %}
     {{ block.super }}
     <script src="{% static 'js/experiment.core.js' %}"></script>
@@ -91,14 +96,18 @@
         </div>
 	</div>
 
-    <div id="jobresult">RESULTADO: <br></div>
+    <div id="experiment_history" class="timeline">
+        <div class="line text-muted"></div>
+    </div>
 
     <script type="text/javascript">
 
     	var experiment;
+        var experimentHistory = new ExperimentHistory("experiment_history");
 
         var jobsInfoString = document.querySelector(".jobs_info").textContent
         var jobsInfo = JSON.parse(jobsInfoString);
+        var jobsQuantity = Object.keys(jobsInfo.jobs).length;
     	console.log(jobsInfo);
 
         function updateElapsedTime() {
@@ -114,14 +123,30 @@
             var finalDate = new Date();
             finalTime.innerHTML = finalDate.getHours() + ":" + finalDate.getMinutes() + ":" + finalDate.getSeconds();
 
+            experimentHistory.addEvent(experimentHistory.stopExperimentEvent(finalDate));
+            createAlert("experiment_status", "success", "Experiment is over!", true);
+
             stopExperiment();
         }
 
         function createTimers(jobsJson, experiment){
-
             for (var jobNum in jobsJson) {
                 var job = jobsJson[jobNum];
-                var timer = new Timer(jobNum, job.time, updateElapsedTime, function(){}, 1000);
+                var stopFunction = function(){};
+                if(parseInt(jobNum) < jobsQuantity){
+                    // In this case it is not the last job, so there will be pauses
+
+                    // Protecting the scope of nextJob with an anonymous function
+                    (function(jobNum){
+                        nextJobIndex = parseInt(jobNum) + 1;
+                        var nextJob = jobsJson[nextJobIndex];
+                        stopFunction = function(){
+                            experimentHistory.addEvent(experimentHistory.pauseExperimentEvent(nextJob));
+                        }
+                    })(jobNum);
+
+                }
+                var timer = new Timer(jobNum, job.time, updateElapsedTime, stopFunction, 1000);
                 experiment.addTimer(timer);
             }
         }
@@ -146,9 +171,6 @@
                 async:false
             });
 
-            console.log("CONSULT TABLE F:");
-            console.log(frequency);
-
             return frequency;
         }
 
@@ -156,17 +178,12 @@
 
             console.log("Changing job...");
 
-            createAlert("experiment_status", "info", "Experiment is paused for now...", false);
+            createAlert("experiment_status", "info", "Experiment is paused for now...", true);
 
-            alert("Experiment is paused for now...");
-
-            var job = +experiment.currentTimer.ref + 1;
+            var job = +experiment.currentTimerIndex + 1;
 
             // Fire the job to the next timer
-
-            /////////////////////////////////////
-            // fireJob(job);
-            /////////////////////////////////////
+            fireJob(job);
 
             var error = 2;
             currentFrequency = consultTableFrequency();
@@ -184,28 +201,22 @@
                     // && currentFrequency < (job_frequency + error)
                 );
 
-            while(!reachedRightFrequency){
-                console.log("Waiting for table reach frequency " + job_frequency + " Hz...");
-                currentFrequency = consultTableFrequency();
-                console.log(currentFrequency);
+            if(reachedRightFrequency){
 
-                reachedRightFrequency = (currentFrequency != null)
-                    && (
-                        currentFrequency > (job_frequency - error)
-                        // && currentFrequency < (job_frequency + error)
-                    );
-                console.log(reachedRightFrequency);
+                createAlert("experiment_status", "info", "Frequency reached, keeping on...", true);
+
+                experimentHistory.addEvent(experimentHistory.unpauseExperimentEvent(job_data));
+
+                experiment.continue();
+            }else{
+                setTimeout(transition, 500, experiment);
             }
 
-            createAlert("experiment_status", "info", "frequency reached, keeping on...", false);
-
-            experiment.continue();
         }
 
         experiment = new Experiment(
             function(){
                 alert("Experiment started!");
-                fireJob(1); // Start the first job when the experiment begins
             },
             stopUpdate,
             transition
@@ -214,6 +225,7 @@
         createTimers(jobsInfo.jobs, experiment);
 
         var dateObject = experiment.start(); // Start the experiment
+        experimentHistory.addEvent(experimentHistory.startExperimentEvent(dateObject));
 
         var hours = dateObject.getHours();
         var minutes = dateObject.getMinutes();
@@ -233,8 +245,6 @@
 
 			var jobs = jobsInfo.jobs;
 			var job_data = jobs[job];
-			var previous = $("#jobresult").html() + "<br>";
-			$("#jobresult").html(previous + "Job " + job + " reached in " + (new Date().toTimeString()) + " with frequency " + job_data.frequency + " Hz");
 
 			//**** Make a request here to the rapsberry server to change the frequency ****//
 			var url = $("#change_frequency_url").html();
@@ -274,8 +284,6 @@
 		}
 
 		function createAlert(bindTo, type, message, overwrite){
-            console.log("On create alert:");
-            console.log(new Date());
 			var alertCode = "<div class='alert alert-dismissible alert-" + type + " text-center'><button type='button' class='close' data-dismiss='alert' aria-label='Close'><span aria-hidden='true'>&times;</span></button> <b><h4>" + message + "</h4></b></div>";
             if(overwrite){
                 $("#"+bindTo).html(alertCode);
