--- a/bevim_project/bevim/templates/base.html
+++ b/bevim_project/bevim/templates/base.html
@@ -15,7 +15,7 @@
 	  <div class="container">
 	    <div class="navbar-header">
           {% block brand-link %}
-          <a class="navbar-brand" href="/" id="app_title"><i>BEViM</i></a>
+          <a class="navbar-brand" href="/" id="app_title"><i>BeVIM</i></a>
           {% endblock %}
         </div>
 
