--- a/bevim_project/bevim/templates/stop_experiment.html
+++ b/bevim_project/bevim/templates/stop_experiment.html
@@ -5,24 +5,10 @@
 {% load bootstrap_ui_tags %}
 
 {% block content %}
-<div id="processing_experiment" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h3 class="text-center modal-title">{% trans 'Processing data' %}</h3>
-      </div>
-      <div class="modal-body text-center">
-          <br>
-            <h1><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></h1>
-          </p>
-      </div>
-      <div class="modal-footer">
-      </div>
-    </div>
-  </div>
-</div>
 
+<h3 class="text-center modal-title">{% trans 'Processing data' %}</h3>
+<br><br>
+<center><h1><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></h1></center>
 <div id="get_data_url" style="display: none;">
     {% url 'process_result' experiment_id=experiment_id %}
 </div>
